--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title></title>
     </head>
     <body>
-        <div style="margin:0 auto;position:absolute;left:50%;width:200px;height:200px;background:#000;"></div>
+        <div style="margin:0 auto;position:absolute;left:50%;width:200px;height:200px;background:#000;">hey there</div>
     </body>
 </html>
